subindo alteração para ver se soliciona meu problema que o gitignore não está ignorando a pasta node_modules

--- a/css/pagina_responsiva/responsivo_index.css
+++ b/css/pagina_responsiva/responsivo_index.css
@@ -15,7 +15,8 @@
 }
 
 @media screen and (min-width: 768px) {
-    .secao2__texto, .botao {
+    .secao2__texto,
+    .botao {
         width: 16rem;
     }
 
@@ -38,7 +39,7 @@
     }
 
     .ilustracao img {
-        width: 18rem;
+        max-width: 18rem;
     }
 
     .conteiner {
