A pagina de editar perfil estś com o formato de foto de perfil correto. A foto está circular.

--- a/css/page/style_animal.css
+++ b/css/page/style_animal.css
@@ -13,6 +13,7 @@
 @import url("../page/style_edit_profile.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_animal.css");
+@import url("../generic/components/photo/style.css");
 
 .lista-botoes {
     display: flex;
