--- a/css/page/style_edit_profile.css
+++ b/css/page/style_edit_profile.css
@@ -11,6 +11,7 @@
 @import url("../responsive_generic/responsive_components/janela_rsponsiva/janela_responsiva.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_profile_message.css");
+@import url("../generic/components/photo/style.css");
 
 .formulario__texto {
     color: #737380;
@@ -36,10 +37,4 @@
 
 #file {
     display: none;
-}
-
-.fotoQuadrada {
-    height: 170px;
-    width: 170px !important;
-    border-radius: 10em;
 }
