--- a/css/page/style_profile.css
+++ b/css/page/style_profile.css
@@ -14,6 +14,7 @@
 @import url("../responsive_generic/responsive_components/card_animal/style.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_profile_message.css");
+@import url("../generic/components/photo/style.css");
 
 .formulario__texto {
     color: #737380;
