--- a/css/page/style_message.css
+++ b/css/page/style_message.css
@@ -13,3 +13,4 @@
 @import url("../responsive_page/style_message.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_profile_message.css");
+@import url("../generic/components/errors/style.css");
