Adicionei o modal dialog nas outras paginas que possuem campos inputs de entrada de dados. Caso o dado seja invalido ou o campo esteja vazio o pop up do modal aparece

--- a/css/page/style_login.css
+++ b/css/page/style_login.css
@@ -14,6 +14,7 @@
 @import url("../page/style_register_login.css");
 @import url("../responsive_page/style_login.css");
 @import url("../responsive_page/style_register_login.css");
+@import url("../generic/components/dialog/style.css");
 
 .conteiner {
     margin-bottom: 5rem;
