--- a/css/page/style_edit_profile.css
+++ b/css/page/style_edit_profile.css
@@ -9,6 +9,7 @@
 @import url("../generic/components/field/style_1.css");
 @import url("../generic/components/janela/janela.css");
 @import url("../generic/components/errors/style.css");
+@import url("../generic/components/dialog/style.css");
 @import url("../responsive_generic/responsive_components/janela_rsponsiva/janela_responsiva.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_profile_message.css");
