--- a/css/generic/base/header.css
+++ b/css/generic/base/header.css
@@ -10,7 +10,6 @@
 .navegacao--conteiner {
     display: flex;
     margin: 0 auto;
-
 }
 
 .navegacao {
@@ -20,7 +19,7 @@
     justify-content: space-between;
 }
 
-.navegacao__imagem--logo img{
+.navegacao__imagem--logo img {
     width: 6em;
     vertical-align: baseline;
 }
@@ -39,7 +38,8 @@
     width: 1.1rem;
 }
 
-.imagem--ellipse, .imagem--usuario {
+.imagem--ellipse,
+.imagem--usuario {
     height: 40px;
     position: relative;
     right: 2.9rem;
@@ -48,9 +48,8 @@
 }
 
 .imagem--usuario {
-    background: url(../../../imagens/Usuário.png) center / cover no-repeat;
+    border-radius: 10em;
 }
 
 .imagem--ellipse {
-    background: url(../../../imagens/Ellipse\ pequena.png) center / cover no-repeat;
 }
