--- a/css/responsive_page/style_animal.css
+++ b/css/responsive_page/style_animal.css
@@ -28,7 +28,7 @@
 
 @media screen and (min-width: 768px) {
     .forma2 {
-        background: url(../../imagens/Forma\ 2.png) center / cover no-repeat;
+        background: url("../../image/Forma\ 2.png") center / cover no-repeat;
         top: 18%;
         right: 0;
         left: auto;
