--- a/css/page/style_animal.css
+++ b/css/page/style_animal.css
@@ -5,6 +5,7 @@
 @import url("../generic/base/footer.css");
 @import url("../generic/base/container.css");
 @import url("../generic/components/button/style_2.css");
+@import url("../generic/components/button/style_green.css");
 @import url("../generic/components/form/style_2.css");
 @import url("../generic/components/field/style_2.css");
 @import url("../generic/components/janela/janela.css");
