--- a/css/generic/components/dialog/style.css
+++ b/css/generic/components/dialog/style.css
@@ -1,8 +1,8 @@
-dialog::backdrop {
+.dialogo--aleta::backdrop {
     background-color: rgb(0 0 0 / 0.5);
 }
 
-dialog {
+.dialogo--aleta {
     border: none;
     border-radius: 0.5rem;
     box-shadow: 0 0 1em rgb(0 0 0 /0.3);
