Mudei os icones para para o icone de menu hamburguer

--- a/css/generic/base/header.css
+++ b/css/generic/base/header.css
@@ -16,7 +16,7 @@
     display: flex;
     position: relative;
     align-items: center;
-    justify-content: space-between;
+    column-gap: 3rem;
 }
 
 .navegacao__imagem--logo img {
@@ -27,18 +27,8 @@
 .navegacao__lista {
     display: flex;
     align-items: center;
-    gap: 3rem;
 }
 
-.item__imagem--casa img {
-    width: 0.9rem;
-}
-
-.item__imagem--mensagem img {
-    width: 1.1rem;
-}
-
-.imagem--ellipse,
 .imagem--usuario {
     height: 40px;
     position: relative;
@@ -51,5 +41,7 @@
     border-radius: 10em;
 }
 
-.imagem--ellipse {
+.menu_hamburguer {
+    color: #ffffff;
+    font-size: xx-large;
 }
