Arrumei uma nova imagem para aparecer quando o usuario estiver sem foto de perfil. Coloquei a organização dos botoes no quisito javascript e html que estavam na pagina de animal na pagina de perfil

--- a/css/generic/components/button/style_1.css
+++ b/css/generic/components/button/style_1.css
@@ -1,12 +1,13 @@
 .botao {
-    background: #FC7071;
+    background: #fc7071;
     border-radius: 7px;
     border: none;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
-    color: #FFFFFF;
+    color: #ffffff;
     font-weight: 600;
     font-size: 1rem;
     padding: 0.5rem 0.7rem;
     text-decoration: none;
     text-align: center;
+    cursor: pointer;
 }
