--- a/css/generic/components/button/style_2.css
+++ b/css/generic/components/button/style_2.css
@@ -1,11 +1,37 @@
 .botao {
-    background: #FC7071;
-    border-radius: .2rem;
+    background: #fc7071;
+    border-radius: 0.2rem;
     border: none;
-    color: #FFFFFF;
+    color: #ffffff;
     font-size: 1rem;
     font-weight: 600;
-    padding: .6rem .8rem;
+    padding: 0.6rem 0.8rem;
     width: 10rem;
     margin: 0 auto;
+    cursor: pointer;
+}
+
+.grupo_botao {
+    display: flex;
+    margin: 0 1.5rem;
+    column-gap: 1.5rem;
+}
+
+.botao_flex-grow {
+    flex-grow: 1;
+    gap: 1.5rem;
+}
+
+.deletar {
+    text-align: left;
+    margin: 1.5rem;
+}
+
+.texto_deletar {
+    border: 2px solid #fc7071;
+    color: #fc7071;
+    padding: 0.1rem 0.5rem;
+    font-size: 1rem;
+    border-radius: 0.2rem;
+    cursor: pointer;
 }
