--- a/css/page/style_edit_profile.css
+++ b/css/page/style_edit_profile.css
@@ -11,7 +11,9 @@
 @import url("../generic/components/janela/janela.css");
 @import url("../generic/components/errors/style.css");
 @import url("../generic/components/dialog/style.css");
+@import url("../generic/components/dialog/style_menu.css");
 @import url("../responsive_generic/responsive_components/janela_rsponsiva/janela_responsiva.css");
+@import url("../responsive_generic/responsive_components/button/style.css");
 @import url("../page/style_profile_message.css");
 @import url("../responsive_page/style_profile_message.css");
 @import url("../generic/components/photo/style.css");
