Adicionei link para redirecionar para a pagina de perfil no icone de perfil. Coloquei a propriedade cursor pointer em alguns elementos das paginas.

--- a/css/generic/base/header.css
+++ b/css/generic/base/header.css
@@ -35,6 +35,7 @@
     right: 2.9rem;
     top: 2.5rem;
     width: 40px;
+    cursor: pointer;
 }
 
 .imagem--usuario {
@@ -44,4 +45,5 @@
 .menu_hamburguer {
     color: #ffffff;
     font-size: xx-large;
+    cursor: pointer;
 }
