--- a/css/generic/components/field/style_4.css
+++ b/css/generic/components/field/style_4.css
@@ -10,7 +10,7 @@
     font-weight: 600;
 }
 
-.campo > .caixa_texto {
+.caixa_texto {
     border: none;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
     border-radius: 0.2rem;
