Criei a pagina para exibir o perfil do animal quando o usuario clicar em um dos cards da pagina que exibe todos os animais que foram cadastrados para adoção. Esta pagina está exibindo todos os dados do animal e a pessoa quem a cadastrou

--- a/css/page/style_animal_profile.css
+++ b/css/page/style_animal_profile.css
@@ -15,3 +15,30 @@
 @import url("../generic/components/photo/style.css");
 @import url("../generic/components/dialog/style_menu.css");
 @import url("../responsive_page/style_profile_message.css");
+
+.anunciante,
+.anunciante__foto {
+    display: flex;
+    align-items: center;
+}
+
+.anunciante {
+    margin: 0 auto;
+    column-gap: 0.6rem;
+}
+
+.anunciante__foto {
+    border: 3px solid #36dad3;
+    border-radius: 0.5rem;
+    column-gap: 0.4rem;
+    padding: 0.4rem;
+    text-decoration: none;
+    color: #505050;
+}
+
+.foto_perfil_anunciante {
+    cursor: pointer;
+    height: 40px;
+    width: 40px;
+    border-radius: 10em;
+}
