Finalizei alguns detalhes da aplicação relacionada ao uso dos recursos no geral.

--- a/css/page/style_profile.css
+++ b/css/page/style_profile.css
@@ -55,3 +55,11 @@
     margin-bottom: 1em;
     border-bottom: 1px solid #e8e8e8;
 }
+
+.foto--circular {
+    cursor: inherit;
+}
+
+.btn-adicionar {
+    cursor: pointer;
+}
