--- a/css/page/style_message.css
+++ b/css/page/style_message.css
@@ -4,6 +4,7 @@
 @import url("../responsive_generic/responsive_base/header.css");
 @import url("../generic/base/footer.css");
 @import url("../generic/base/container.css");
+@import url("../generic/components/dialog/style_menu.css");
 @import url("../generic/components/button/style_2.css");
 @import url("../generic/components/form/style_2.css");
 @import url("../generic/components/field/style_1.css");
