--- a/css/page/style_adopt_animals.css
+++ b/css/page/style_adopt_animals.css
@@ -2,13 +2,18 @@
 @import url("../generic/base/body.css");
 @import url("../generic/base/header.css");
 @import url("../responsive_generic/responsive_base/header.css");
+@import url("../responsive_generic/responsive_base/footer.css");
+@import url("../generic/components/dialog/style_menu.css");
 @import url("../generic/base/footer.css");
 @import url("../generic/components/card-animal/style.css");
 @import url("../responsive_generic/responsive_base/footer_animal.css");
 @import url("../generic/base/container.css");
 @import url("../responsive_page/style_animals.css");
 @import url("../generic/components/photo/style.css");
-@import url("../generic/components/dialog/style_menu.css");
+
+.menu_hamburguer {
+    display: none;
+}
 
 .conteiner {
     display: flex;
