--- a/css/page/style_index.css
+++ b/css/page/style_index.css
@@ -4,54 +4,17 @@
 @import url("../responsive_generic/responsive_base/header.css");
 @import url("../generic/base/footer.css");
 @import url("../responsive_generic/responsive_base/footer.css");
-@import url("../generic/components/button/style_1.css");
-@import url("../responsive_page/style_index.css");
-
-body {
-    background: #3772ff;
-    color: #ffffff;
-}
+@import url("../generic/base/container.css");
+@import url("../generic/components/dialog/style_menu.css");
+@import url("../generic/components/button/style_2.css");
+@import url("../generic/components/form/style_1.css");
+@import url("../generic/components/field/style_3.css");
+@import url("../generic/components/errors/style.css");
+@import url("../page/style_register_login.css");
+@import url("../responsive_page/style_register.css");
+@import url("../responsive_page/style_register_login.css");
 
 .conteiner {
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    margin-bottom: 1.5rem;
-}
-
-.secao1,
-.secao2__texto {
-    text-align: center;
-}
-
-.secao1__imagem--logo {
-    margin-bottom: 2rem;
-}
-
-.secao1__texto {
-    font-size: 1.8rem;
-    font-weight: 600;
-}
-
-.secao2__texto {
-    font-weight: 400;
-    line-height: 1.3rem;
-}
-
-.botoes {
-    display: flex;
-    flex-direction: column;
-    gap: 0.7rem;
-}
-
-.ilustracao {
-    margin-left: -2rem;
-    margin-bottom: -1rem;
-    text-align: center;
-}
-
-.forma2 {
-    position: absolute;
-    right: 0;
+    margin-bottom: 8rem;
+    gap: 1.4rem;
 }
