--- a/css/page/style_login.css
+++ b/css/page/style_login.css
@@ -5,6 +5,7 @@
 @import url("../generic/base/footer.css");
 @import url("../responsive_generic/responsive_base/footer.css");
 @import url("../generic/base/container.css");
+@import url("../generic/components/dialog/style_menu.css");
 @import url("../generic/components/button/style_2.css");
 @import url("../generic/components/form/style_1.css");
 @import url("../generic/components/field/style_3.css");
